--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
       - uses: game-ci/unity-builder@v2                  
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-        with:          
+        with:
+          customImage: 'unityci/editor:2019.2.11f1'          
           targetPlatform: ${{ matrix.targetPlatform }}
       - uses: actions/upload-artifact@v2
         with:
