--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: josStorer/get-current-time@v2.0.2
         id: current-time
         with:
-          format: YYYYMMDD-HH
+          format: YYYYMMDD
           utcOffset: "+08:00"
       - uses: actions/checkout@v2
         with:
@@ -34,5 +34,5 @@ jobs:
           targetPlatform: ${{ matrix.targetPlatform }}
       - uses: actions/upload-artifact@v2
         with:
-          name: Build-${{ steps.current-time.outputs.day }}
+          name: Build-${{ steps.current-time.outputs.readableTime }}
           path: build/${{ matrix.targetPlatform }}
