--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,5 @@ jobs:
           targetPlatform: ${{ matrix.targetPlatform }}
       - uses: actions/upload-artifact@v2
         with:
-          name: Build-${{ steps.current-time.outputs.readableTime }}
+          name: Build-${{ steps.current-time.outputs.year }}
           path: build/${{ matrix.targetPlatform }}
