--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,43 @@
-name: Build project
+name: Actions 😎
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  buildForAllSupportedPlatforms:
+  buildForWindowsBasedPlatforms:
     name: Build for ${{ matrix.targetPlatform }}
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     strategy:
       fail-fast: false
       matrix:
         targetPlatform:
-          - StandaloneWindows64 # Build a Windows 64-bit standalone.          
+          - StandaloneWindows64 # Build a Windows 64-bit standalone.
     steps:
-      - name: Get current time
-        uses: josStorer/get-current-time@v2.0.2
-        id: current-time
-        with:
-          format: YYYYMMDD
-          utcOffset: "+08:00"
+      - name: Set current date as env variable
+        id: date
+        run: |
+          echo "{date}={$(date +'%Y-%m-%dT%H:%M:%S')}" >> $GITHUB_STATE
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
           lfs: true
       - uses: actions/cache@v2
         with:
-          path: Library
-          key: Library-${{ matrix.targetPlatform }}
-          restore-keys: Library-
+          path: .
+          key:
+            Library-${{ matrix.targetPlatform }}
+          restore-keys: 
+            Library-
       - uses: game-ci/unity-builder@v2
         env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENCE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: ${{ matrix.targetPlatform }}
       - uses: actions/upload-artifact@v2
         with:
-          name: Build-${{ steps.current-time.outputs.year }}-${{ steps.current-time.outputs.month}}-${{ steps.current-time.outputs.day}}
-          path: build/${{ matrix.targetPlatform }}
+          name: WindowsBuild-${{ env.date }}
+          path: build
