--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         targetplatform: [x64]
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
     - name: Install .NET Core
       uses: actions/setup-dotnet@v1
